# Device-Broker

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md  main.cpp  platformio.ini  sdkconfig  sdkconfig.esp32  sdkconfig.esp32_test  sdkconfig.old  setup-pre-commit.sh
.github/workflows/: cpplint.yaml  on_push.yml  tests.yml
architecture/iot/: Backend.md  Broker.md  IoT overview.canvas  JSON payload from Package device to Broker.md  JSON payload to backend.md  Package device.md  QR to Broker.canvas
docs/: getting_started.md  http_requests.md  wifi_connectivity.md
githooks/pre-commit/: configure-pre-commit.sh  requirements.txt
include/: README.md
include/gpio/: esp_gpio_driver.h
include/http/: esp32_http_client.h  http_client.cpp  http_client.h  http_driver.h  http_esp_client_driver.h  http_interface.cpp  http_interface.h  http_native_client_driver.h  http_request.h  http_response.h
include/sensor/: sensor-measurement-entry.h  sensor.cpp  sensor.h
include/storage/: buffer_manager.h  flash_buffer.cpp  flash_buffer.h  memory_buffer.cpp  memory_buffer.h  storage.cpp  storage.h
include/wifi/: wifi_client.h
main/: CMakeLists.txt
main/src/: main.cpp
main/test/board/integration/test_http_client/: main.cpp
main/test/board/unit/test_flash_buffer/: main.cpp
src/: CMakeLists.txt  main.cpp
src/gpio/: esp_gpio_driver.cpp
src/http/: esp32_http_client.cpp  http_client.cpp  http_esp_client_driver.cpp  http_interface.cpp
src/storage/: flash_buffer.cpp  memory_buffer.cpp  storage.cpp
src/wifi/: wifi_client.cpp
(+18 files in other folders)
